force-app/main/default/objects/AccountOpprtunity__c/AccountOpprtunity__c.object-meta.xml
<CustomObject>
    <label>AccountOpprtunity</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>AccountOpprtunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountOpprtunitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>