force-app/main/default/objects/AccountOpprtunity__c/fields/Account_FEIN__c.field-meta.xml
<CustomField>
    <fullName>Account_FEIN__c</fullName>
    <formula>Account__r.Federal_ID_Number__c</formula>
    <label>Account FEIN</label>
    <type>Text</type>
</CustomField>