force-app/main/default/objects/AccountOpprtunity__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF(
  ISPICKVAL(Product__r.Service_Type__c, &quot;Per Employee&quot;),
  Product__r.MRC__c *    Number_of_Employees__c   ,
  IF(
    OR(
      ISPICKVAL(Product__r.Service_Type__c, &quot;Monthly Flat&quot;),
      ISPICKVAL(Product__r.Service_Type__c, &quot;Flat&quot;)
    ),
    Product__r.MRC__c,
    0
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>