force-app/main/default/objects/AccountOpprtunity__c/fields/Deleted_Record__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted Record</label>
    <type>Checkbox</type>
</CustomField>