force-app/main/default/objects/AccountOpprtunity__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AccountOpprtunitys</relationshipLabel>
    <relationshipName>AccountOpprtunitys</relationshipName>
    <type>Lookup</type>
</CustomField>