force-app/main/default/objects/AccountOpprtunity__c/fields/Total_MRC_per_Employee__c.field-meta.xml
<CustomField>
    <fullName>Total_MRC_per_Employee__c</fullName>
    <label>Total MRC per Employee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>