force-app/main/default/objects/AccountOpprtunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_FEIN__c</columns>
    <columns>Product__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Total_MRC_per_Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>